--- a/CSS/button/button.html
+++ b/CSS/button/button.html
@@ -1,21 +1,15 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Layouts</title>
-	<meta name="description" content="A really cool site!">
-	<link rel="stylesheet" type="text/css" href="css_3.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Button Styles</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div id="container">
-		<div id="box-1">Box-1
-		</div>
-		<div id="box-2">Box-2
-		</div>
-		<div id="box-3">Box-3
-		</div>
-		<div class="clear">
-		</div>
-	</div>
+    <a href="#" class="button one">Search</a>
+    <a href="#" class="button two">+</a>
+    <a href="#" class="button three">Create Account</a>
 </body>
 </html>
