--- a/CSS/button/button.html
+++ b/CSS/button/button.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Styles</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?=Roboto:ital,wght@0,500;1,100;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="#" class="button one">Search</a>
