--- a/CSS/octoCat/octoCat.html
+++ b/CSS/octoCat/octoCat.html
@@ -39,15 +39,15 @@
     <div class="row three">
         <div class="block">
             <img src="img/snowtocat_final.jpeg" alt="">
-            <p>Mountains are calling!!!!!</p>
+            <p>I love the mountains! I love the mountains fa-la-la-la-la</p>
         </div>
         <div class="block">
             <img src="img/labtocat.png" alt="">
-            <p>So if I mix these 2 will the explode?</p>
+            <p>I will mix these and take over the world</p>
         </div>
         <div class="block">
             <img src="img/minion.png" alt="">
-            <p>It was definetly</p>
+            <p>It was definetly Bob...</p>
         </div>
     </div>
 </body>
