adding a few more flourishes

--- a/CSS/navbar/navbar.html
+++ b/CSS/navbar/navbar.html
@@ -17,10 +17,25 @@
         <ul class="nav-links">
             <li><a href="#">Home
                 <img src="img/house.jpeg" alt="dream house image">
+                <p>Sigh! I want to move in today!</p>
             </a></li>
-            <li><a href="#" class="active">My Profile <img src="img/me.jpg" alt="me in a cave, cause why not?"></a></li>
-            <li><a href="#">Find Connections <img src="img/connections.png" alt="making connections"></a></li>
-            <li><img src="img/running.jpeg" alt="silly kid running away"><button class="btn"><span>Sign Out</span></button></li>
+            <li>
+                <a href="#" class="active">My Profile 
+                    <img src="img/me.jpg" alt="me in a cave, cause why not?">
+                    <p>Help! I think I'm stuck!</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">Find Connections    
+                    <img src="img/connections.png" alt="making connections">
+                    <p>Sooooo...this guy came to fix our electricity</p>
+                </a>
+            </li>
+            <li>
+                <img src="img/running.jpeg" alt="silly kid running away">
+                <p>If they anyone asks....I didn't drink anything!!!</p>
+                <button class="btn"><span>Sign Out</span></button>
+            </li>
         </ul>
     </div>    
 </body>
