--- a/CSS/columns/columns.html
+++ b/CSS/columns/columns.html
@@ -6,8 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Columns</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="row">
+        <div class="col">1/4</div>
+        <div class="col">1/4</div>
+        <div class="col">1/4</div>
+        <div class="col">1/4</div>
+    </div>    
+    <div class="row">
+        <div class="col">1/3</div> 
+        <div class="col-2">2/3</div>
+    </div>    
+    <div class="row">
+        <div class="col-2">2/5</div>
+        <div class="col-3">3/5</div>
+    </div>    
 </body>
 </html>
