--- a/CSS/octoCat/octoCat.html
+++ b/CSS/octoCat/octoCat.html
@@ -39,7 +39,7 @@
     <div class="row three">
         <div class="block">
             <img src="img/snowtocat_final.jpeg" alt="">
-            <p>I love the mountains! I love the mountains fa-la-la-la-la</p>
+            <p>fa-la-la-la-la I love the mountains</p>
         </div>
         <div class="block">
             <img src="img/labtocat.png" alt="">
