--- a/CSS/columns/columns.html
+++ b/CSS/columns/columns.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="row">
-        <div class="col">1/4</div>
-        <div class="col">1/4</div>
-        <div class="col">1/4</div>
-        <div class="col">1/4</div>
+        <div class="col bar">1/4 <span>How hungry I am</span></div>
+        <div class="col bar">1/4 <span>How happy I am</span></div>
+        <div class="col bar">1/4 <span>How sleepy I am</span></div>
+        <div class="col bar">1/4 <span>How confused am I?</span></div>
     </div>    
     <div class="row">
         <div class="col">1/3</div> 
