--- a/CSS/octoCat/octoCat.html
+++ b/CSS/octoCat/octoCat.html
@@ -14,39 +14,39 @@
     <h1><span class="visible">Octo Cat!</span> <span class="hidden">Hidden thoughts of OctoCat!</span></h1>
     <div class="row one">
         <div class="block">
-            <img src="img/gobbleotron.gif" alt="">
+            <img src="img/gobbleotron.gif" alt="Ocotcat trapping a turkey">
             <p>Common' you can do it! </p>
         </div>
         <div class="block">
-            <img src="img/welcometocat.png" alt="">
+            <img src="img/welcometocat.png" alt="Surprise Cat">
             <p>I don't know you but Surprie!!</p>
         </div>
         <div class="block">
-            <img src="img/octoCat.gif" alt="">
+            <img src="img/octoCat.gif" alt="Mummy octocat">
             <p>What is going on?</p>
         </div>
     </div>
     <div class="row two">
         <div class="block">
-            <img src="img/dinotocat.png" alt="">
+            <img src="img/dinotocat.png" alt="Dragon bug stepping octocat">
             <p>Fee-Fi-Fo-Fum!</p>
         </div>
         <div class="block">
-            <img src="img/puddle_jumper_octodex.jpeg" alt="">
+            <img src="img/puddle_jumper_octodex.jpeg" alt="octocat in the rain">
             <p>Is this puddle deep?!</p>
         </div>
     </div>
     <div class="row three">
         <div class="block">
-            <img src="img/snowtocat_final.jpeg" alt="">
+            <img src="img/snowtocat_final.jpeg" alt="Skiing octocat">
             <p>fa-la-la-la-la I love the mountains</p>
         </div>
         <div class="block">
-            <img src="img/labtocat.png" alt="">
+            <img src="img/labtocat.png" alt="Mad scientist octocat">
             <p>I will mix these and take over the world</p>
         </div>
         <div class="block">
-            <img src="img/minion.png" alt="">
+            <img src="img/minion.png" alt="minion octocat">
             <p>It was definetly Bob...</p>
         </div>
     </div>
