--- a/CSS/octoCat/octoCat.html
+++ b/CSS/octoCat/octoCat.html
@@ -7,8 +7,8 @@
     <title>Octo Cat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1><span class="visible">Octo Cat!</span> <span class="hidden">Hidden thoughts of OctoCat!</span></h1>
@@ -19,7 +19,7 @@
         </div>
         <div class="block">
             <img src="img/welcometocat.png" alt="Surprise Cat">
-            <p>I don't know you but Surprie!!</p>
+            <p>I don't know you but Surprise!!</p>
         </div>
         <div class="block">
             <img src="img/octoCat.gif" alt="Mummy octocat">
@@ -36,7 +36,7 @@
             <p>Is this puddle deep?!</p>
         </div>
     </div>
-    <div class="row three">
+    <div class="row three"> 
         <div class="block">
             <img src="img/snowtocat_final.jpeg" alt="Skiing octocat">
             <p>fa-la-la-la-la I love the mountains</p>
