--- a/CSS/columns/columns.html
+++ b/CSS/columns/columns.html
@@ -19,12 +19,12 @@
         <div class="col bar">1/4 <span>How confused am I?</span></div>
     </div>    
     <div class="row">
-        <div class="col bar">1/3 <span>Do I want to Run today?</span></div> 
-        <div class="col-2 bar">2/3 <span>Do I want to work out today?</span></div>
+        <div class="col bar">1/3 <span>How much do I want to Run today?</span></div> 
+        <div class="col-2 bar">2/3 <span>How sore am I today?</span></div>
     </div>    
     <div class="row">
-        <div class="col-2 bar">2/5 <span>Do I want it to be sunny?</span></div>
-        <div class="col-3 bar">3/5 <span>do I want it to snow?</span></div>
+        <div class="col-2 bar">2/5 <span>How much do I love my dog?</span></div>
+        <div class="col-3 bar">3/5 <span>How many brownies shoule I eat?</span></div>
     </div>    
 </body>
 </html>
