annimations for my shark game

--- a/CSS/userCard/userCard.html
+++ b/CSS/userCard/userCard.html
@@ -18,7 +18,7 @@
             <img src="img/user-circle.png" alt="account icon">
         </div>
         <div class="info-wrp">
-            <div class="speech-bubble">Sharks!<br/> Where's Jack Sparrow? <img src="img/speak.png" alt="speech bubble" class="speech"></div>
+            <div class="speech-bubble"><p>Sharks!<br/> Where's Jack Sparrow?</p> <img src="img/speak.png" alt="speech bubble" class="speech"></div>
             <h1>Jane Doe</h1>
             <div class="txt-icn"><img src="img/map-marker.png" class="icon" alt="map icon"> <span class="location">Seattle</span></div>
             <p class="skills">Developer | Engineer | Problem Solver</p>
