--- a/CSS/userCard/userCard.html
+++ b/CSS/userCard/userCard.html
@@ -17,7 +17,7 @@
         <div class="icon-wrp">
             <img src="img/user-circle.png" alt="account icon">
         </div>
-        <div class="info-wrp">
+        <div class="info-wrp">got 
             <div class="speech-bubble"><p>Sharks!<br/> Where's Jack Sparrow?</p> <img src="img/speak.png" alt="speech bubble" class="speech"></div>
             <h1>Jane Doe</h1>
             <div class="txt-icn"><img src="img/map-marker.png" class="icon" alt="map icon"> <span class="location">Seattle</span></div>
