making profile updates

--- a/CSS/portfolio/portfolio.html
+++ b/CSS/portfolio/portfolio.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="indv-info">
                     <img src="img/user-circle.png" alt="icon person">
-                    <p class="name">Four Breakfast</p>  
+                    <p class="name">Poor Breakfast</p>  
                 </div>
                 <div class="indv-info">
                     <img src="img/user-circle.png" alt="icon person">
