--- a/JS/fizzbuzz/fizzbuzz.html
+++ b/JS/fizzbuzz/fizzbuzz.html
@@ -19,6 +19,8 @@
             <li>For numbers which are a multiple of both 3 and 5, print "FizzBuzz"</li>
         </ul>
         <p>All other numbers should just print normally</p>
+
+        <div class="fizz-cont"></div>
     </div>
 <script src="script.js"></script>
 </body>
