--- a/JS/fizzbuzz/fizzbuzz.html
+++ b/JS/fizzbuzz/fizzbuzz.html
@@ -14,9 +14,9 @@
     <div class="fizzBuzz">
         <h1>Fizz Buzz</h1>
         <ul>
-            <li>For each number that is a multiple of 3, print "Fizz"</li>
-            <li>For each number that is a multiple of 5, print "Buzz"</li>
-            <li>For numbers which are a multiple of both 3 and 5, print "FizzBuzz"</li>
+            <li>For each number that is a multiple of 3, print "<span class="pink">Fizz</span>"</li>
+            <li>For each number that is a multiple of 5, print "<span class="blue">Buzz</span>"</li>
+            <li>For numbers which are a multiple of both 3 and 5, print "<span class="dk-blue">FizzBuzz</span>"</li>
         </ul>
         <p>All other numbers should just print normally</p>
 
