--- a/JS/lessons/objects/index.html
+++ b/JS/lessons/objects/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="button">Test Button</button>
+    <button class="button" onclick="buttonClick()">Test Button</button>
     <div class="box"></div>
+    <script src="objects.js"></script>
 </body>
 </html>
