tweaking the final code for the assigement

--- a/JS/likes/likes.html
+++ b/JS/likes/likes.html
@@ -13,14 +13,40 @@
 </head>
 <body>
     <div class="container-wrp">
+        <div class="top">
+            <h1>Network</h1>
+        </div>
+        <aside>
+            <img src="img/user.png" alt="Avatar img">
+            <a href="">Add an Avatar</a>
+            <h2>James Doe</h2>
+        </aside>
         <main>
             <div class="def-block">
                 <div class="word-elements">
-                    <h2>Some User</h2>
-                    <p class="likes"><span class="num">3</span> Like(s)</p>
+                    <h2>Neil M</h2>
+                    <p><span class="num">9</span> Like(s)</p>
                     <button class="button likes" onclick="like(event)"> Like</button>
                 </div>
-                <p class="definition">This is some filler text, it can say anything we like</p>
+                <p class="definition">I just set up this new discord bot, le me know what you all think. <a href=#">link</a></p>
+            </div>
+
+            <div class="def-block">
+                <div class="word-elements">
+                    <h2>Nichole K</h2>
+                    <p><span class="num">12</span> Like(s)</p>
+                    <button class="button likes" onclick="like(event)"> Like</button>
+                </div>
+                <p class="definition">Just finished my <a href="#">next comic</a>.Check it out</p>
+            </div>
+
+            <div class="def-block">
+                <div class="word-elements">
+                    <h2>Jim R</h2>
+                    <p><span class="num">9</span> Like(s)</p>
+                    <button class="button likes" onclick="like(event)"> Like</button>
+                </div>
+                <p class="definition">I can't stop listening to this <a href="#"></a>new album</a>. Who else is liking it?</p>
             </div>
         </main>
     </div>
