--- a/JS/clock/index.html
+++ b/JS/clock/index.html
@@ -12,6 +12,7 @@
         <div id="seconds"></div>
         <div id="minutes"></div>
         <div id="hour"></div>
+        <div class="center"></div>
     </div>
 
     <script src="script.js"></script>
