--- a/JS/calculator/index.html
+++ b/JS/calculator/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@100;400;700&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="img/calculator.png" type="image/x-icon">
 </head>
 <body>
   <h1>Calculate This?!</h1>
