--- a/JS/calculator/index.html
+++ b/JS/calculator/index.html
@@ -14,7 +14,7 @@
 <body>
   <h1>Calculate This?!</h1>
   <div id="calculator">
-    <div id="display">0</div>
+    <div id="display"></div>
     <div class="row">
       <button onclick="press(7);">7</button>
       <button onclick="press(8);">8</button>
