adding all files

--- a/APIs/index.html
+++ b/APIs/index.html
@@ -15,13 +15,13 @@
         <div class="container">
     <img src="" class="icon"/>
     <h1>Pocatello, Idaho</h1>
-    <p>Daily Weather Forecast <span class="summary"></span></p> 
+    <p>Daily Weather Forecast: <span class="summary"></span></p> 
     <p class="subtext"></p>
     <p class="type">Category: <span></span></p>    
-    <p class="severity">Weather serenity <span></span></p>
+    <p class="severity">Weather Serenity <span></span></p>
     <div class="high-low">
-        <span>High: <span class="high"></span></span>
-        <span>Low: <span class="low"></span></span>
+        <span><span class="up">↑</span>High: <span class="high"></span></span>
+        <span><span class="down">↓</span>Low: <span class="low"></span></span>
     </div>
 </div>
 </main>
